[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "pd-api"
version = "0.1.0"
description = "采购配送管理后端（FastAPI）：合同/客户/报货/磅单/结余/收款等"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Proprietary" }
keywords = ["fastapi", "mysql", "pd", "weighbill", "contract"]
dependencies = [
  "apscheduler>=3.10.4",
  "bcrypt>=4.2.0",
  "cryptography>=46.0.0",
  "email-validator>=2.2.0",
  "fastapi>=0.115.0",
  "numpy>=1.26.0,<2",
  "onnxruntime>=1.16.0,<2",
  "openai>=1.0.0",
  "opencv-contrib-python>=4.8.0",
  "openpyxl>=3.1.0",
  "pandas>=2.2.0",
  "Pillow>=10.0.0",
  "pulp>=3.3.0",
  "pydantic>=2.10.0",
  "PyJWT>=2.9.0",
  "PyMySQL>=1.1.0",
  "python-dotenv>=1.0.0",
  "python-multipart>=0.0.9",
  "rapidocr-onnxruntime>=1.3.0,<2",
  "requests>=2.31.0",
  "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27.0",
  "pytest>=8.0.0",
  "pytest-asyncio>=0.24.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app", "core", "services"]

[tool.uv]
default-groups = []
index-url = "https://pypi.tuna.tsinghua.edu.cn/simple"
